# FDKG

./: .gitignore  .gitmodules  CNAME  README.md  app.59712999.js  app.59712999.js.map  deploy.sh  index.27b3ae00.js  index.2a88d7c5.js  index.6b815632.js  index.b71e74eb.js  index.html  package-lock.json  package.json  pvss_test.go  tsconfig.json
app/: .gitignore  README.md  build  dkg.go  elGamal.go  encryption.go  package.json  pvss.go  simulation_results_nodes_BarabasiAlbert_1000.csv  simulation_results_nodes_BarabasiAlbert_10000.csv  simulation_results_nodes_BarabasiAlbert_200.csv  simulation_results_nodes_BarabasiAlbert_500.csv  simulation_results_nodes_RandomGraph_10000.csv  tsconfig.json
charts/: .gitignore  charts.ipynb  decision-makers.py  main.py  one_big_heatmap.py  plot_slice.py  preview.py
circuits/: .mocharc.json  README.md  circomkit.json  circuits.json  create_pvss.circom  open_pvss.circom  package.json  setup.sh  setup_fflonk.sh  setup_groth16.sh  setup_plonk.sh  tsconfig.json
dkg/: test.py
dlog_finder/: .gitignore  Cargo.toml  plot.py  results210.csv  results26.csv  results27.csv
dlog_finder/src/: main.rs  multithreaded.rs  single.rs
docs/: Ballot.md  Comparision to Polys.md  Comparison to Open Vote Network (OVN).md  DKG.md  Development.md  ElGamal.md  Elliptic Curve Cryptography.md  Federated Protocol.md  Homomorphic Encryption ElGamal vs Paillier.md  Implementation.md  Lev's voting protocol.md  Lookup Table.md  PoB - Proof of Ballot.md  PoD - Proof of Decryption.md  Protocol.md  README.md  Registration Protocol.md  Ring Signature.md  (+12 more)
(+209 files in other folders)
